src/test/resources/validation/testReadingSchemasInDirectory/schema1.graphqls
type Query {
  customer(id: ID!): Customer
}

type Customer @table {
  id: ID!
}