src/test/resources/error/queryReturningInterfaceCollection/schema.graphqls
type Query {
  nodes(ids: [ID!]): [Node] #collections of interfaces is not supported
}

type ProgramStudierett @node(table: "STUDIERETT") {
  id: ID!
}
